--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,7 @@ jobs:
     name: Create PR
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@master
     - name: Create PR
       uses: ./
       env:
